--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button type="button" class="navigate">Перейти по ссылке</button>
     <style>
       button {
-        background-color: wheat;
+        background-color: red;
         width: 200px;
         height: 30px;
         margin-right: 30px;
