--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Search</h1>
-    <button type="button" class="search">Впишите ссылку</button>
-    <button type="button" class="navigate">Перейти по ссылке</button>
+    <button type="button" class="search">traoaoaoaoa</button>
+    <button type="button" class="navigate">Пеbfjbkldfjgldfjgfе</button>
     <style>
       button {
         background-color: red;
